sign in, sign out and browse

--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -1,1 +1,22 @@
-<h1>Home</h1>
+	<div class="card-deck mb-3 text-center">
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Free</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">Get started for FREE</h1>
+            <p>Dummy copy </p>
+           
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Sign Up Today</h4>
+          </div>
+          <div class="card-body">
+            <p>Click Below to get started.</p>
+           
+            <%= link_to "Sign up Now", new_account_registration_path, class: "btn btn-lg btn-block btn-primary" %>
+          </div>
+        </div>
+      </div>
