--- a/app/assets/stylesheets/slides.scss
+++ b/app/assets/stylesheets/slides.scss
@@ -16,8 +16,7 @@
     opacity: 0;
     z-index: 1;
 
-    font-size: 40px;
-    // padding: 40px;
+    font-size: 40px;    
     box-sizing: border-box;
     background: #333;
     color: #fff;
@@ -28,13 +27,23 @@
     transition: opacity 1s;
 }
 
+
+.user-details{
+    
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    width: 100px;
+    margin-left: -50px;
+}
+
 .showing{
     opacity: 1;
     z-index: 2;
 }
 
 
-#slide-controls {
+#slide-controls{
     margin-top: 20px;
     width: 100%;
     text-align: center;
@@ -44,19 +53,13 @@
     }
 }
 
+.image-carousel{
+    
+    width: 300px;
+    heigth: 400px;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
-.slide:nth-of-type(1){
-    background: red;
-}
-.slide:nth-of-type(2){
-    background: orange;
-}
-.slide:nth-of-type(3){
-    background: green;
-}
-.slide:nth-of-type(4){
-    background: blue;
-}
-.slide:nth-of-type(5){
-    background: purple;
-}
+
