--- a/app/views/browse/browse.html.erb
+++ b/app/views/browse/browse.html.erb
@@ -1,9 +1,11 @@
 <ul id="slides">
 
-	<% @users.each do |user| %>
-		<div class = "slide" data-id = "<%= user.id %>">
-			<li> <%= user.first_name %> </li>
-		</div>
+	<% @users.each_with_index do |user, i| %>
+		<li class = "slide <%= 'showing' if i==0 %>" data-id = "<%= user.id %>">
+			<div class="image-carousel" style= "background-image: url('<%= url_for user.images.first %>')">
+			</div>
+			<spav class="user-details"><%= user.first_name %> </spav>
+		</li> 
 	<% end %>
 	
 </ul>
