--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -10,7 +10,7 @@
 
 		  <%= link_to "Browse ", browse_path, class: "text-dark mr-3" %>
 		  <%= link_to "My Matches", "#", class: "text-dark mr-3" %>
-		  <%= link_to "Settings", "#", class: "text-dark" %>
+		  <%= link_to "Settings", edit_account_registration_path, class: "text-dark" %>
 		</nav>
 
 		<%= link_to "Sign out", destroy_account_session_path, method: :delete, class: "btn btn-secondary mr-2" %>
