--- a/app/assets/stylesheets/slides.scss
+++ b/app/assets/stylesheets/slides.scss
@@ -14,11 +14,8 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    z-index: 1;
-
-    font-size: 40px;    
+    z-index: 1; 
     box-sizing: border-box;
-    background: #333;
     color: #fff;
 
     -webkit-transition: opacity 1s;
@@ -30,11 +27,19 @@
 
 .user-details{
     
+       
     position: absolute;
     bottom: 50px;
     left: 50%;
-    width: 100px;
-    margin-left: -50px;
+    width: 200px;
+    margin-left: -100px;
+    font-size: 18px;
+
+    .user-name{
+
+        font-size: 28px;
+        
+    }
 }
 
 .showing{
@@ -56,7 +61,7 @@
 .image-carousel{
     
     width: 300px;
-    heigth: 400px;
+    height: 400px;
     margin: 0 auto;
     background-repeat: no-repeat;
     background-size: cover;
