--- a/app/views/browse/browse.html.erb
+++ b/app/views/browse/browse.html.erb
@@ -2,9 +2,17 @@
 
 	<% @users.each_with_index do |user, i| %>
 		<li class = "slide <%= 'showing' if i==0 %>" data-id = "<%= user.id %>">
-			<div class="image-carousel" style= "background-image: url('<%= url_for user.images.first %>')">
+			
+			<div class="image-carousel" style="background-image: url('<%= url_for user.images.first %>')">
 			</div>
-			<spav class="user-details"><%= user.first_name %> </spav>
+
+			<!-- <div class="image-carousel" style= "background-image: url('<%= url_for(user.images.first) %>')">
+			</div> -->
+			<div class="user-details">
+				<span class="user-name"><%= user.first_name %>, 31 </span> <br />
+			<i class= "fa fa-graduation-cap mr-1"></i> Job/Studies <br />
+			<i class= "fa fa-map-marker mr-3"></i> Location
+			</div>
 		</li> 
 	<% end %>
 	
